--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fazenda XYZ</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Bem-vindo à Fazenda XYZ</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Sobre nós</h2>
+            <p>A Fazenda XYZ é dedicada à produção de alimentos orgânicos.</p>
+        </section>
+        <section>
+            <h2>Nossos Produtos</h2>
+            <ul id="lista-produtos">
+                <!-- Itens de produto serão adicionados dinamicamente pelo script.js -->
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Fazenda XYZ. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
+
+
