--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fazenda XYZ</title>
+    <title>Fazenda</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -15,7 +15,7 @@
     <main>
         <section>
             <h2>Sobre nós</h2>
-            <p>A Fazenda XYZ é dedicada à produção de alimentos orgânicos.</p>
+            <p>A Fazenda  é uma propriedade rural caracterizada pelo cultivo de plantas ou criação de animais em larga escala, com o objetivo principal de produzir alimentos ou commodities agrícolas. .</p>
         </section>
         <section>
             <h2>Nossos Produtos</h2>
