--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <h2>Sobre nós</h2>
-            <p>A Fazenda  é uma propriedade rural caracterizada pelo cultivo de plantas ou criação de animais em larga escala, com o objetivo principal de produzir alimentos ou commodities agrícolas. .</p>
+            <p>A Fazenda Uma propriedade rural é um local para cultivo ou criação em grande escala, visando produção agrícola ou pecuária. .</p>
         </section>
         <section>
             <h2>Nossos Produtos</h2>
