--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <h2>Sobre nós</h2>
-            <p>A Fazenda Uma propriedade rural é um local para cultivo ou criação em grande escala, visando produção agrícola ou pecuária. .</p>
+            <p>A Fazenda é uma propriedade rural é um local para cultivo ou criação em grande escala, visando produção agrícola ou pecuária.</p>
         </section>
         <section>
             <h2>Nossos Produtos</h2>
