--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <h2>Nossos Produtos</h2>
             <ul id="lista-produtos">
                 <!-- Itens de produto serão adicionados dinamicamente pelo script.js -->
+                 <p>Doce de Leite Pastoso
+                    Embalagens com 680g e 300g</p>
+                    <img src="doce de leite.jpg" alt="">
             </ul>
         </section>
     </main>
