--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                  <p>Doce de Leite Pastoso
                     Embalagens com 680g e 300g</p>
                     <img src="doce de leite.jpg" alt="">
+                    <p>Café em Cápsulas – Clássico</p>
+                    <img src="café.jpg" alt="">
             </ul>
         </section>
     </main>
