--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo à Fazenda XYZ</h1>
+        <h1>Bem-vindo à Fazenda</h1>
     </header>
     <main>
         <section>
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Fazenda XYZ. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Fazenda. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
