--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
         <section>
             <h2>Nossos Produtos</h2>
             <ul id="lista-produtos">
-                <!-- Itens de produto serão adicionados dinamicamente pelo script.js -->
-                 <p>Doce de Leite Pastoso
-                    Embalagens com 680g e 300g</p>
-                    <img src="doce de leite.jpg" alt="">
-                    <p>Café em Cápsulas – Clássico</p>
-                    <img src="café.jpg" alt="">
+                <!-- Itens de produto serão adicionados dinamicamente pelo script.js --
             </ul>
         </section>
     </main>
