--- a/index.html
+++ b/index.html
@@ -22,6 +22,64 @@
             <ul id="lista-produtos">
                 <!-- Itens de produto serão adicionados dinamicamente pelo script.js --
             </ul>
+             <h1>Produtos de Fazenda</h1>
+        <nav>
+            <ul>
+                <li><a href="#frutas">Frutas</a></li>
+                <li><a href="#vegetais">Vegetais</a></li>
+                <li><a href="#grãos">Grãos</a></li>
+                <li><a href="#laticínios">Laticínios</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <section id="frutas">
+            <h2>Frutas</h2>
+            <ul>
+                <li>Maçãs</li>
+                <li>Peras</li>
+                <li>Laranjas</li>
+                <li>Morango</li>
+            </ul>
+        </section>
+
+        <section id="vegetais">
+            <h2>Vegetais</h2>
+            <ul>
+                <li>Tomates</li>
+                <li>Cenouras</li>
+                <li>Alface</li>
+                <li>Batatas</li>
+            </ul>
+        </section>
+
+        <section id="grãos">
+            <h2>Grãos</h2>
+            <ul>
+                <li>Milho</li>
+                <li>Trigo</li>
+                <li>Soja</li>
+                <li>Arroz</li>
+            </ul>
+        </section>
+
+        <section id="laticínios">
+            <h2>Laticínios</h2>
+            <ul>
+                <li>Leite</li>
+                <li>Queijo</li>
+                <li>Yogurte</li>
+                <li>Manteiga</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Produtos de Fazenda</p>
+    </footer>
+</body>
+</html>
         </section>
     </main>
     <footer>
